fix misaligned heading

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    padding:10px 50px 10px 5px;
+    padding:10px 5px 10px 5px;
     background-color:#502030;
     color:white;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -30,6 +30,7 @@ header h1 {
     font-weight:200;
     font-size:2.5rem;
     line-height:1;
+    padding-right:50px;
 }
 header h2 {
     font-weight:normal;
